--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -564,6 +564,8 @@
 	<string name="deliver">पहुंचाना</string>
 	<string name="Return">वापसी</string>
 	<string name="delivery_id">डिलीवरी आइडी</string>
+	<string name="no_deliveries_pending">No deliveries pending</string>
+	<string name="no_deliveries_completed">No deliveries completed</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
