--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -495,8 +495,7 @@
     <string name="Return">પરત</string>
     <string name="amnt_credited">રકમ જમા</string>
     <string name="delivery_id">ડીલીવરી આડી </string>
-    <string name="no_deliveries_pending">No deliveries pending</string>
-    <string name="no_deliveries_completed">No deliveries completed</string>
+    <string name="cash_collected">Cash Collected</string>
 
     <string name="delivery_completed">ડીલીવરી સંપૂર્ણ </string>
     <string name="delivery_cancelled">ડીલીવરી રદ્દ </string>
