--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -532,6 +532,7 @@
     <string name="delivery_cancelled">ಡೆಲಿವರಿ ರದ್ದುಗೊಳಿಸಲಾಗಿದೆ</string>
     <string name="no_deliveries_pending">No deliveries pending</string>
     <string name="no_deliveries_completed">No deliveries completed</string>
+    <string name="cash_collected">Cash Collected</string>
 
 
     <string-array name="CountryCodes" >
