--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -513,6 +513,7 @@
     <string name="amnt_credited">ക്രെഡിറ്റ്‌ ചെയ്ത തുക</string>
     <string name="no_deliveries_pending">No deliveries pending</string>
     <string name="no_deliveries_completed">No deliveries completed</string>
+    <string name="cash_collected">Cash Collected</string>
 
 
     <string-array name="CountryCodes" >
