--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -500,8 +500,7 @@
     <string name="Return">ଫେରାଇବା.</string>
     <string name="amnt_credited">ରାଶି ଆସିଯାଇଛି.</string>
     <string name="delivery_id">ଡେଲିଭେରି ଆଇଡି.</string>
-    <string name="no_deliveries_pending">No deliveries pending</string>
-    <string name="no_deliveries_completed">No deliveries completed</string>
+    <string name="cash_collected">Cash Collected</string>
 
     <string name="delivery_completed">ଡେଲିଭରି ସଂପୁର୍ଣ ହେଲା</string>
     <string name="delivery_cancelled">ଡେଲିଭରି କ୍ୟାନ୍-ସଲ୍</string>
