--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -568,6 +568,7 @@
     <string name="delivery_id">డెలివరీ ఐడి</string>
     <string name="no_deliveries_pending">No deliveries pending</string>
     <string name="no_deliveries_completed">No deliveries completed</string>
+    <string name="cash_collected">Cash Collected</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
