--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
 
 
 
-	<!--<string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> &lt;!&ndash; Live&ndash;&gt;-->
+	<string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> <!-- Live-->
 	<!-- <string name="google_maps_api_key">AIzaSyBsdXoSFcTy5YAIJmpkoIeJ_7peuH1QOUo</string> Dev-->
-	 <string name="google_maps_api_key">AIzaSyCgflGVCfOr4aSmmBisoGUe_671qRngy2s</string> General
+	<!-- <string name="google_maps_api_key">AIzaSyCgflGVCfOr4aSmmBisoGUe_671qRngy2s</string> General-->
 
 
 
@@ -575,6 +575,7 @@
 	<string name="please_press_here">Please Press Here</string>
 	<string name="no_deliveries_pending">No deliveries pending</string>
 	<string name="no_deliveries_completed">No deliveries completed</string>
+	<string name="cash_collected">Cash Collected</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
