--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -594,6 +594,8 @@
     <string name="start_the_ride">சவாரி தொடங்க</string>
     <string name="deliver_order_number">ஒப்படைப்பு ஆடர் என். ((%s)) </string>
     <string name="all_orders_have_been_delivered">அணைத்து ஆடர்களும் ஒப்படைக்கபட்டன</string>
+    <string name="s_no">S No.</string>
+    <string name="order_no">Order No.</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
