--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -513,6 +513,8 @@
     <string name="no_deliveries_pending">কনো ডেলিভাৰি পেনদিং নাই</string>
     <string name="no_deliveries_completed">কনো ডেলিভাৰি সমাপ্ত হোৱা নাই</string>
     <string name="cash_collected">Cash Collected</string>
+    <string name="s_no">S No.</string>
+    <string name="order_no">Order No.</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
