--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -533,6 +533,8 @@
     <string name="no_deliveries_pending">No deliveries pending</string>
     <string name="no_deliveries_completed">No deliveries completed</string>
     <string name="cash_collected">Cash Collected</string>
+    <string name="s_no">S No.</string>
+    <string name="order_no">Order No.</string>
 
 
     <string-array name="CountryCodes" >
