--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -515,6 +515,8 @@
     <string name="to_no_colon">କୁ</string>
     <string name="no_deliveries_pending">କୌଣସି ଡେଲିଭରି ପେଣ୍ଡିଂଗ୍ ନାହିଁ</string>
     <string name="no_deliveries_completed">ଡେଲିଭରି ପୁରଣ ହୋଇ ନାହିଁ</string>
+    <string name="s_no">S No.</string>
+    <string name="order_no">Order No.</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
