--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -518,19 +518,8 @@
     <string name="no_language_to_select">Language Option Not Available</string>
     <string name="ride_complete">రైడ్ పూర్తయింది</string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="cancelled">Cancelled</string>
-    <string name="to_no_colon">To</string>
-    <string name="address">Address</string>
-    <string name="delivered">Delivered</string>
-    <string name="delivery_on">Delivery ON</string>
-    <string name="delivery_is_over">Delivery is Over</string>
-    <string name="start_the_ride">Start the ride</string>
-    <string name="deliver_order_number">Deliver order no. %s</string>
-    <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
-    <string name="delivery_cancelled">Delivery Cancelled</string>
 
     <string name="miss_call_otp">Give a Miss Call</string>
-    <string name="delivery_completed">Delivery Completed</string>
 
 
     <string name="give_missed_call_dialog_text">మాకు ఒక మిస్డ్ కాల్ ఇవ్వండి మేము మీ గుర్తింపుని ద్రువికరిస్తాము</string>
@@ -566,11 +555,24 @@
     <string name="Return">రిటర్న్</string>
     <string name="amnt_credited">డబ్బులు మీ ఖాతా లో జమ చేయబడినవి </string>
     <string name="delivery_id">డెలివరీ ఐడి</string>
-    <string name="no_deliveries_pending">No deliveries pending</string>
-    <string name="no_deliveries_completed">No deliveries completed</string>
     <string name="cash_collected">Cash Collected</string>
     <string name="s_no">S No.</string>
     <string name="order_no">Order No.</string>
+
+    <string name="delivery_completed">డెలివరీ పూర్తయింది</string>
+    <string name="delivery_cancelled">డెలివరీ కాన్సిల్</string>
+    <string name="cancelled">రద్దు</string>
+    <string name="address">చిరునామా</string>
+    <string name="delivered">పంపించబడింది</string>
+    <string name="delivery_on">డెలివరీ ఆన్ </string>
+    <string name="delivery_is_over">డెలివరీ అయిపోయింది</string>
+    <string name="start_the_ride">రైడ్ ప్రారంభించండి</string>
+    <string name="deliver_order_number">డెలివరీ ఆర్డర్ సంఖ్య. %s</string>
+    <string name="all_orders_have_been_delivered">అన్ని ఆర్డర్లు డెలివరీ చెయ్యబడ్డాయి</string>
+    <string name="to_no_colon">కు </string>
+    <string name="no_deliveries_pending">దేలివేరిలు ఏమి మిగిలి లేవు </string>
+    <string name="no_deliveries_completed">దేలివేరిలు ఏమి పూర్తి కాలేవు</string>
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
