--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -512,6 +512,7 @@
     <string name="no_deliveries_completed">કોઈ ડિલિવરી પૂર્ણ નથી </string>
     <string name="s_no">S No.</string>
     <string name="order_no">Order No.</string>
+    <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
 
 
     <string-array name="CountryCodes" >
