--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -578,6 +578,7 @@
 	<string name="cash_collected">Cash Collected</string>
 	<string name="s_no">S No.</string>
 	<string name="order_no">Order No.</string>
+	<string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
