--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -507,7 +507,7 @@
     <string name="delivered">ডেলিভাৰি হল</string>
     <string name="delivery_on">ডেলিভাৰি অন</string>
     <string name="delivery_is_over">ডেলিভাৰি শেষ</string>
-    <string name="start_the_ride">ৰাইদ আৰম্ভ কৰক</string>
+    <string name="start_the_delivery">ৰাইদ আৰম্ভ কৰক</string>
     <string name="deliver_order_number">ডেলিভাৰ অৰ্দাৰ নং. %s</string>
     <string name="all_orders_have_been_delivered">সকলো অৰ্দাৰ ডেলিভাৰ হৈ গল</string>
     <string name="no_deliveries_pending">কনো ডেলিভাৰি পেনদিং নাই</string>
@@ -516,6 +516,7 @@
     <string name="s_no">S No.</string>
     <string name="order_no">Order No.</string>
     <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
+    <string name="details">Details</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
