--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -509,7 +509,7 @@
     <string name="delivered">ପହଁଚାଇ ଦିଆଗଲା</string>
     <string name="delivery_on">ଡେଲିଭରି ଉପରେ</string>
     <string name="delivery_is_over">ଡେଲିଭରି ସମାପ୍ତ ହେଲା</string>
-    <string name="start_the_ride">ରାଇଡ୍ ଷ୍ଟାର୍ଟ୍ କରନ୍ତୁ</string>
+    <string name="start_the_delivery">ରାଇଡ୍ ଷ୍ଟାର୍ଟ୍ କରନ୍ତୁ</string>
     <string name="deliver_order_number">ଡେଲିଭରି ଅଡ଼ର୍ ନମ୍ବର୍ %s</string>
     <string name="all_orders_have_been_delivered">ସବୁ ଅଡ଼ର୍ ଡେଲିଭରି କରିଦିଆଯାଇଛି</string>
     <string name="to_no_colon">କୁ</string>
@@ -518,6 +518,7 @@
     <string name="s_no">S No.</string>
     <string name="order_no">Order No.</string>
     <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
+    <string name="details">Details</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
