--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -555,7 +555,7 @@
 	<string name="view_orders">View Orders</string>
 	<string name="delivery_numbers">No. of Delivery :</string>
 	<string name="approx">(Approx)</string>
-	<string name="start_the_ride">Start the ride</string>
+	<string name="start_the_delivery">Start the delivery</string>
 	<string name="deliver_order_number">Deliver order no. %s</string>
 	<string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
 	<string name="returned">Returned</string>
@@ -579,6 +579,7 @@
 	<string name="s_no">S No.</string>
 	<string name="order_no">Order No.</string>
 	<string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
+	<string name="details">Details</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
