--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -542,7 +542,6 @@
     <string name="JUGNOO">JUGNOO</string>
     <string name="ride_complete">சவாரி வெற்றிகரமாக முடிந்தது </string>
     <string name="no_not_verified">Phone Number not verified</string>
-    <string name="to_no_colon">To</string>
     <string name="resend_OTP">ஒ டி பீ -ஐ மீண்டும் அனுப்பவும்</string>
     <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">எங்களுக்கு மிஸ்ட் கால் கொடுங்கள் நாங்கள் உங்கள் அடையாளத்தைச் சரிபார்கிறோம்</string>
@@ -579,9 +578,6 @@
     <string name="Return">திரும்ப</string>
     <string name="amnt_credited">வந்த தொகை</string>
     <string name="delivery_id">விநியோக ஐடி</string>
-    <string name="no_deliveries_pending">No deliveries pending</string>
-    <string name="no_deliveries_completed">No deliveries completed</string>
-    <string name="cash_collected">Cash Collected</string>
 
 
     <string name="delivery_completed">ஒப்படைப்பு  நிறைவு</string>
@@ -594,10 +590,16 @@
     <string name="start_the_delivery">சவாரி தொடங்க</string>
     <string name="deliver_order_number">ஒப்படைப்பு ஆடர் என். %s </string>
     <string name="all_orders_have_been_delivered">அணைத்து ஆடர்களும் ஒப்படைக்கபட்டன</string>
-    <string name="s_no">S No.</string>
     <string name="order_no">Order No.</string>
     <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
     <string name="details">Details</string>
+
+
+    <string name="to_no_colon">செய்ய</string>
+    <string name="no_deliveries_pending">ஒப்படைப்புகள் எதுவும் நிலுவையில் இல்லை</string>
+    <string name="no_deliveries_completed">எந்த ஒப்படைப்புகளும் முடியவில்லை </string>
+    <string name="cash_collected">பணம் சேகரிக்கப்பட்டது </string>
+    <string name="s_no">வரிசை எண்</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
