fix_notification_center_UI: UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -517,7 +517,7 @@
 	<string name="select_destination">Please select atleast one Destination</string>
 	<string name="JUGNOO">JUGNOO</string>
 	<string name="fatafat_on">Fatafat On</string>
-	<string name="Notifications">Notifications</string>
+	<string name="Notifications">NOTIFICATIONS</string>
 	<string name="PAYMENTS">PAYMENTS</string>
 	<string name="enter_customer_phone_no">Enter Customer Phone No.</string>
 	<string name="invoice_detail">INVOICE DETAILS</string>
