--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -580,6 +580,8 @@
 	<string name="order_no">Order No.</string>
 	<string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
 	<string name="details">Details</string>
+	<string name="success">Success</string>
+	<string name="outstanding_amount">Outstanding Amount</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
