--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -512,15 +512,17 @@
     <string name="all_orders_have_been_delivered">সকলো অৰ্দাৰ ডেলিভাৰ হৈ গল</string>
     <string name="no_deliveries_pending">কনো ডেলিভাৰি পেনদিং নাই</string>
     <string name="no_deliveries_completed">কনো ডেলিভাৰি সমাপ্ত হোৱা নাই</string>
-    <string name="cash_collected">Cash Collected</string>
-    <string name="s_no">S No.</string>
-    <string name="order_no">Order No.</string>
-    <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
-    <string name="details">Details</string>
     <string name="Messages">Messages</string>
     <string name="Hints">Hints</string>
     <string name="tricks">Tricks To Earn</string>
-    <string name="success">Success</string>
+
+    <string name="cash_collected">নগদ লোৱা হল</string>
+    <string name="s_no">ক্ৰমিক  নং</string>
+    <string name="order_no">অৰ্দাৰ নং</string>
+    <string name="details">বিৱৰন</string>
+    <string name="present_near_delivery_location">আপোনাৰ অৰ্দাৰ ডেলিভাৰ মাৰ্ক কৰিবলৈ আপুনি ডেলিভাৰি লকেচনৰ কাষত থাকিব লাগিব ।</string>
+    <string name="success">সফল</string>
+    <string name="outstanding_amount">আগৰ বাকি এদজাষ্ট কৰা হল</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
