--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -495,7 +495,6 @@
     <string name="Return">પરત</string>
     <string name="amnt_credited">રકમ જમા</string>
     <string name="delivery_id">ડીલીવરી આડી </string>
-    <string name="cash_collected">Cash Collected</string>
 
     <string name="delivery_completed">ડીલીવરી સંપૂર્ણ </string>
     <string name="delivery_cancelled">ડીલીવરી રદ્દ </string>
@@ -510,15 +509,17 @@
     <string name="to_no_colon">માટે </string>
     <string name="no_deliveries_pending">કોઈ ડિલિવરી બાકી નથી </string>
     <string name="no_deliveries_completed">કોઈ ડિલિવરી પૂર્ણ નથી </string>
-    <string name="s_no">S No.</string>
-    <string name="order_no">Order No.</string>
-    <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
-    <string name="details">Details</string>
     <string name="Messages">Messages</string>
     <string name="Hints">Hints</string>
     <string name="tricks">Tricks To Earn</string>
-    <string name="success">Success</string>
 
+    <string name="cash_collected">કેશ લીધું છે </string>
+    <string name="s_no">સ. ન.</string>
+    <string name="order_no">ઓર્ડર નં</string>
+    <string name="details">વિગતો</string>
+    <string name="present_near_delivery_location">ઓર્ડર ને ડીલીવરી માર્ક કરવા માટે ડીલીવરી જગ્યાની નજીક હાજર હોવા જરૂરી છે</string>
+    <string name="success">સફળ થઉં</string>
+    <string name="outstanding_amount">બાદ બાકી થઇ ગયું </string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
