--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -522,9 +522,6 @@
     <string name="delivery_id">ಡೆಲಿವರಿ ID</string>
     <string name="delivery_completed">ಡೆಲಿವರಿ ಪೂರ್ಣಗೊಂಡಿದೆ</string>
     <string name="delivery_cancelled">ಡೆಲಿವರಿ ರದ್ದುಗೊಳಿಸಲಾಗಿದೆ</string>
-    <string name="order_no">Order No.</string>
-    <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
-    <string name="details">Details</string>
     <string name="Messages">Messages</string>
     <string name="Hints">Hints</string>
     <string name="tricks">Tricks To Earn</string>
@@ -542,7 +539,12 @@
     <string name="no_deliveries_completed">ಯಾವುದೇ ಡೆಲಿವರಿಯ ಪೂರ್ಣ ಗೊಂಡಿಲ್ಲ </string>
     <string name="cash_collected">ನಗದು ಹಣ ಸಂಗ್ರಹಿಸಲಾಗಿದೆ</string>
     <string name="s_no">ಕ್ರಮ ಸಂ. </string>
-    <string name="success">Success</string>
+
+    <string name="order_no">ಆರ್ಡರ್ ಸಂಖ್ಯೆ </string>
+    <string name="details">ವಿವರಗಳು </string>
+    <string name="present_near_delivery_location">ನೀವು ಡೆಲಿವರಿಯ ಸ್ಥಳದಲ್ಲಿದ್ದಾರೆ ಮಾತ್ರ ಆರ್ಡರ್ ಡೆಲಿವರಿ ಯಾಗುತ್ತದೆ </string>
+    <string name="success">ಯಶಸ್ವಿಯಾಗಿದೆ </string>
+    <string name="outstanding_amount">ಮಹೋನ್ನತ ಹೊಂದಾಣಿಕೆ ಮಾಡಲಾಗಿದೆ </string>
 
 
     <string-array name="CountryCodes" >
