--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -584,7 +584,7 @@
 	<string name="Hints">Hints</string>
 	<string name="tricks">Tricks To Earn</string>
 	<string name="success">Success</string>
-	<string name="outstanding_amount">Outstanding Amount</string>
+	<string name="outstanding_amount">Outstanding Adjusted</string>
 
 
 	<string-array name="CountryCodes" >
