--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -520,6 +520,9 @@
     <string name="present_near_delivery_location">ઓર્ડર ને ડીલીવરી માર્ક કરવા માટે ડીલીવરી જગ્યાની નજીક હાજર હોવા જરૂરી છે</string>
     <string name="success">સફળ થઉં</string>
     <string name="outstanding_amount">બાદ બાકી થઇ ગયું </string>
+    <string name="delivery_fare">Delivery Fare</string>
+    <string name="return_subsidy">Return Subsidy</string>
+    <string name="return_distance">Return Distance</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
