feature_upload_doccument: register screen UI created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -520,6 +520,8 @@
     <string name="cash_collected">ക്യാഷ് ശേഖരിച്ചു</string>
     <string name="details">Details</string>
     <string name="success">Success</string>
+    <string name="vehicle_status">Vehicle Status</string>
+    <string name="rented">Rented</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
