--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -520,6 +520,8 @@
     <string name="present_near_delivery_location">You must be present near the delivery location to mark this order delivered.</string>
     <string name="details">Details</string>
     <string name="success">Success</string>
+    <string name="vehicle_status">Vehicle Status</string>
+    <string name="rented">Rented</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
