--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -575,6 +575,8 @@
     <string name="no_deliveries_completed">దేలివేరిలు ఏమి పూర్తి కాలేవు</string>
     <string name="details">Details</string>
     <string name="success">Success</string>
+    <string name="vehicle_status">Vehicle Status</string>
+    <string name="rented">Rented</string>
 
 
     <string-array name="CountryCodes" >
